# varo6.me

./: .gitattributes  Cargo.toml  db.sqlite
assets/: main.css  output.css  pygment.css
src/: api.rs  db.rs  main.rs
templates/: about.html  base.html  index.html  projects.html  workflow.html
templates/components/: about.html  projects.html  workflow.html
