[package]
name = "varo6"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1", features = ["ws"] }
serde = "1.0.217"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

